added webpack for bundling

--- a/support/index.html
+++ b/support/index.html
@@ -10,7 +10,7 @@
 </style>
 <body>
   <div id="container"></div>
-  <script src="/lock.js"></script>
+  <script src="/build/lock.js"></script>
   <script>
     const cid = "ixeOHFhD7NSPxEQK6CFcswjUsa5YkcXS";
     const domain = "auth0-tests-lock.auth0.com";
